# mission-geospatial-poc

./: .gitignore  README.md  docker-compose.yml  requirements.txt   run_pipeline.sh
cpp/: CMakeLists.txt  main.cpp
data/: README.md
docs/: archtecture.md
scripts/: download_data.py  generate_dummy_data.py  import_data.py  validate_data.py
sql/: 001_init.sql  002_indexes.sql  002_seed.sql  003_queries.sql
